--- a/composer.json
+++ b/composer.json
@@ -26,20 +26,20 @@
         "qingbing/php-request": ">=1.0, <2.0",
         "qingbing/php-html": ">=1.0, <2.0",
         "qingbing/php-render": ">=1.0, <2.0",
-        "qingbing/php-assets-manager": ">=1.0, <2.0",
-        "qingbing/php-web-user": ">=1.0, <2.0",
-        "qingbing/php-error-handler": ">=1.0, <2.0",
         "qingbing/php-file-cache": ">=1.0, <2.0",
         "qingbing/php-log": ">=1.0, <2.0",
-        "qingbing/php-mail": ">=1.0, <2.0",
-        "qingbing/php-operate-log": ">=1.0, <2.0",
-        "qingbing/php-table-view": ">=1.0, <2.0",
-        "qingbing/php-captcha": ">=1.0, <2.0",
-        "qingbing/php-kindeditor": ">=1.0, <2.0",
-        "qingbing/php-form-generator": ">=1.0, <2.0",
-        "qingbing/php-upload": ">=1.0, <2.0",
-        "qingbing/php-labels": ">=1.0, <2.0",
-        "qingbing/pf-tools-table-header": ">=1.0, <2.0"
+        "qingbing/pf-components-assets-manager": ">=1.0, <2.0",
+        "qingbing/pf-components-error-handler": ">=1.0, <2.0",
+        "qingbing/pf-tools-mail": ">=1.0, <2.0",
+        "qingbing/pf-tools-upload": ">=1.0, <2.0",
+        "qingbing/pf-tools-labels": ">=1.0, <2.0",
+        "qingbing/pf-tools-table-header": ">=1.0, <2.0",
+        "qingbing/pf-widgets-form-generator": ">=1.0, <2.0",
+        "qingbing/pf-widgets-captcha": ">=1.0, <2.0",
+        "qingbing/pf-widgets-kindeditor": ">=1.0, <2.0",
+        "qingbing/pf-widgets-table-view": ">=1.0, <2.0",
+        "qingbing/pf-abstracts-web-user": ">=1.0, <2.0",
+        "qingbing/pf-abstracts-operate-log": ">=1.0, <2.0"
     },
     "require-dev": {
         "qingbing/pf-database-dict": ">=1.0, <2.0",
